Dired-mode CS added

--- a/docs/CS.tex
+++ b/docs/CS.tex
@@ -94,5 +94,25 @@
 
 \subsection*{Dired-mode}
 
+\command{m}{Mark}
+\command{u}{Unmark}
+\command{q}{Quit}
+\command{s}{Sort}
+\command{a}{Open in same buffer}
+\command{d}{Flag file deletion}
+\command{x}{Do flagged deletion}
+\command{i}{Inser subdir}
+\command{\$}{Hide subdir}
+\command{C}{Copy}
+\command{D}{Delete}
+\command{R}{Rename}
+\command{\&}{Async shell command}
+\command{=}{Diff}
+\command{+}{Create folder}
+\command{C-x C-q}{Edit mode}
+\command{C-c ESC}{Abort changes}
+\command{C-c C-c}{Finish edit}
+
+
 \end{multicols*}
 \end{document}
