Significant updates (snippets,network monitor, cheat sheet) modified:   docs/CS.tex modified:   rc/.emacs modified:   rc/.xmobarrc
New snippets folder!
new file:   snippets/haskell-mode/function

--- a/docs/CS.tex
+++ b/docs/CS.tex
@@ -113,6 +113,25 @@
 \command{C-c ESC}{Abort changes}
 \command{C-c C-c}{Finish edit}
 
+\subsection*{Yasnippet}
+\command{C-<tab>}{Expand snippet}
+\command{C-+}{Snippet list}
+\command{yas-describe-tables}{All snippets}
+\command{C-c C-c}{Load snippet}
+\command{C-c C-t}{Try snippet}
+
+\subsection*{Emerge}
+\command{n}{Next difference}
+\command{p}{Previous difference}
+\command{q}{Quit}
+\command{a}{Choose a version}
+\command{b}{Choose b version}
+\command{d a}{Set a as default}
+\command{d b}{Set b as default}
+\command{l}{Recenter}
+\command{e}{Edit mode}
+\command{C-c C-c f}{Fast mode}
+
 
 \end{multicols*}
 \end{document}
