More to cheat sheet

--- a/docs/CS.tex
+++ b/docs/CS.tex
@@ -27,6 +27,7 @@
 \command{C-x C-b}{ibuffer}
 \command{C-M-S-g}{Magit status}
 \command{C-s}{search}
+\command{C-c C-c}{Comment Region}
 \command{C-\%}{Replace}
 \command{C-M-\%}{Replace Regex}
 \command{C-x C-q}{Read only}
@@ -92,6 +93,7 @@
 \command{C-c-<}{Indentation shallower}
 \command{C-c->}{Indentation deeper}
 
+
 \subsection*{Dired-mode}
 
 \command{m}{Mark}
@@ -114,6 +116,7 @@
 \command{C-c C-c}{Finish edit}
 
 \subsection*{Yasnippet}
+
 \command{C-<tab>}{Expand snippet}
 \command{C-+}{Snippet list}
 \command{yas-describe-tables}{All snippets}
@@ -121,6 +124,7 @@
 \command{C-c C-t}{Try snippet}
 
 \subsection*{Emerge}
+
 \command{n}{Next difference}
 \command{p}{Previous difference}
 \command{q}{Quit}
@@ -132,6 +136,15 @@
 \command{e}{Edit mode}
 \command{C-c C-c f}{Fast mode}
 
+\subsection*{LaTex}
+
+\command{C-x ]}{Close enviroment}
+\command{C-c C-e}{Insert environment}
+\command{C-c RET}{Insert macro}
+\command{C-M-a}{find matching begin}
+\command{C-M-e}{find matching end}
+\command{M-RET}{insert item}
+\command{C-c C-s}{insers section}
 
 \end{multicols*}
 \end{document}
