updates modified:   docs/CS.tex modified:   rc/.emacs

--- a/docs/CS.tex
+++ b/docs/CS.tex
@@ -25,8 +25,9 @@
 \command{C-x C-c}{Close Emacs}
 \command{C-x C-b}{Buffer list}
 \command{C-x C-b}{ibuffer}
+\command{C-u C-x =}{Describe char}
 \command{C-M-S-g}{Magit status}
-\command{C-s}{search}
+\command{C-s}{Search}
 \command{C-c C-c}{Comment Region}
 \command{C-\%}{Replace}
 \command{C-M-\%}{Replace Regex}
@@ -38,7 +39,6 @@
 \command{C-<right>}{Move word F}
 \command{C-M-<left>}{Move s-expression B}
 \command{C-M-<right>}{Move s-expression F}
-
 \command{C-x <up>}{Window move-up}
 \command{C-x <down>}{Window move-down}
 \command{C-x <right>}{Window move-right}
