Fixes and additions to CS modified:   docs/CS.tex modified:   rc/.emacs

--- a/docs/CS.tex
+++ b/docs/CS.tex
@@ -32,6 +32,11 @@
 \command{C-\%}{Replace}
 \command{C-M-\%}{Replace Regex}
 \command{C-x C-q}{Read only}
+\command{C-u C-x =}{Describe char}
+\command{C->}{Add cursor below}
+\command{C-<}{Add cursor above}
+\command{C-c C-<}{Add cursor on match}
+\command{C-l}{Center at cursor}
 
 \subsection*{Movement}
 
@@ -104,10 +109,12 @@
 
 \command{m}{Mark}
 \command{u}{Unmark}
+\commnad{U}{Unmark all}
 \command{q}{Quit}
 \command{s}{Sort}
+\command{y}{Show file type}
 \command{a}{Open in same buffer}
-\command{d}{Flag file deletion}
+\command{d}{Flag file for deletion}
 \command{x}{Do flagged deletion}
 \command{i}{Inser subdir}
 \command{\$}{Hide subdir}
