new wallpaper script modified:   docs/CS.tex new file:   docs/createImages.sh

--- a/docs/CS.tex
+++ b/docs/CS.tex
@@ -109,7 +109,7 @@
 
 \command{m}{Mark}
 \command{u}{Unmark}
-\commnad{U}{Unmark all}
+\command{U}{Unmark all}
 \command{q}{Quit}
 \command{s}{Sort}
 \command{y}{Show file type}
