urxvt added modified:   docs/CS.tex new file:   rc/.Xdefaults modified:   rc/.xmonad/xmonad.hs

--- a/docs/CS.tex
+++ b/docs/CS.tex
@@ -151,5 +151,12 @@
 \command{M-RET}{insert item}
 \command{C-c C-s}{insers section}
 
+\subsection*{\texttt{Urxvt}}
+
+\command{C-x}{Select}
+\command{v}{Change select mode}
+\command{y}{Copy}
+\command{S-Insert}{Paste}
+
 \end{multicols*}
 \end{document}
