new stuff on CS

--- a/docs/CS.tex
+++ b/docs/CS.tex
@@ -162,5 +162,12 @@
 \command{y}{Copy}
 \command{S-Insert}{Paste}
 
+\subsection*{Org-mode}
+
+\command{M-RET}{Insert headline}
+\command{S-M-RET}{Insert TODO/Checkbox}
+\command{C-c C-t}{Toggle TODO}
+\command{C-c C-c}{Toggle Checkbox}
+
 \end{multicols*}
 \end{document}
