--- a/docs/CS.tex
+++ b/docs/CS.tex
@@ -169,5 +169,9 @@
 \command{C-c C-t}{Toggle TODO}
 \command{C-c C-c}{Toggle Checkbox}
 
+\subsection*{Term-mode}
+\command{C-c C-j}{Switch to line mode}
+\command{C-c C-k}{Switch to char mode}
+
 \end{multicols*}
 \end{document}
